--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "@vuepress/plugin-google-analytics": "^1.8.2",
     "vuepress": "^1.8.2"
+  },
+  "dependencies": {
+    "animate.css": "^4.1.1"
   }
 }
