--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.2",
     "@vuepress/plugin-google-analytics": "^1.8.2",
+    "@vuepress/plugin-medium-zoom": "^1.9.5",
     "animate.css": "^4.1.1",
     "markdown-it-mark": "^3.0.1",
     "markdown-it-task-lists": "^2.1.1",
